# crystal-dock

./: .gitignore  README  README.md
docs/: index.html
src/: CMakeLists.txt  cmake_uninstall.cmake.in  crystal-dock.desktop  crystal-dock.desktop.cmake  main.cc
src/desktop/: budgie_desktop_env.cc  budgie_desktop_env.h  cinnamon_desktop_env.cc  cinnamon_desktop_env.h  desktop_env.cc  desktop_env.h  gnome_desktop_env.cc  gnome_desktop_env.h  hyprland_desktop_env.cc  hyprland_desktop_env.h  kde_desktop_env.cc  kde_desktop_env.h  labwc_desktop_env.cc  labwc_desktop_env.h  lxqt_desktop_env.cc  lxqt_desktop_env.h  mate_desktop_env.cc  mate_desktop_env.h  niri_desktop_env.cc  niri_desktop_env.h  sway_desktop_env.cc  sway_desktop_env.h  wayfire_desktop_env.cc  wayfire_desktop_env.h  xfce_desktop_env.cc  xfce_desktop_env.h
src/display/: kde_auto_hide_manager.cc  kde_auto_hide_manager.h  kde_screen_edge.c  kde_screen_edge.h  kde_virtual_desktop_manager.cc  kde_virtual_desktop_manager.h  kde_window_manager.cc  kde_window_manager.h  plasma_virtual_desktop.c  plasma_virtual_desktop.h  plasma_window_management.c  plasma_window_management.h  window_system.cc  window_system.h  wlr_foreign_toplevel_management.c  wlr_foreign_toplevel_management.h  wlr_window_manager.cc  wlr_window_manager.h
src/model/: application_menu_config.cc  application_menu_config.h  application_menu_config_test.cc  application_menu_entry.h  config_helper.cc  config_helper.h  launcher_config.cc  launcher_config.h  multi_dock_model.cc  multi_dock_model.h  multi_dock_model_test.cc
src/utils/: command_utils.h  desktop_file.cc  desktop_file.h  draw_utils.h  font_utils.h  icon_utils.h  math_utils.h  menu_utils.h  task_helper.cc  task_helper.h
src/view/: add_panel_dialog.cc  add_panel_dialog.h  add_panel_dialog.ui  add_panel_dialog_test.cc  appearance_settings_dialog.cc  appearance_settings_dialog.h  appearance_settings_dialog.ui  appearance_settings_dialog_test.cc  application_menu.cc  application_menu.h  application_menu_settings_dialog.cc  application_menu_settings_dialog.h  application_menu_settings_dialog.ui  application_menu_settings_dialog_test.cc  battery_indicator.cc  battery_indicator.h  calendar.cc  calendar.h  clock.cc  clock.h  color_button.cc  color_button.h  desktop_selector.cc  desktop_selector.h  desktop_selector_test.cc  dock_item.cc  dock_item.h  dock_panel.cc  dock_panel.h  dock_panel_test.cc  edit_keyboard_layouts_dialog.cc  edit_keyboard_layouts_dialog.h  edit_keyboard_layouts_dialog.ui  edit_launchers_dialog.cc  edit_launchers_dialog.h  edit_launchers_dialog.ui  edit_launchers_dialog_test.cc  icon_based_dock_item.cc  icon_based_dock_item.h  icon_button.cc  (+30 more)
